[project]
name = "fast_td3"
version = "0.1.0"
description = "Locomotion using Reinforcement Learning and Model Predictive Control"
authors = [{name = "neverorfrog", email = "97flavio.maiorana@gmail.com"}]
requires-python = "==3.10"
license = {text = "Apache-2.0"}
readme = "README.md"

[project.scripts]
train = "fast_td3.train:main"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["fast_td3"]

[tool.hatch.build.targets.editable]
packages = ["fast_td3"]
